--- a/Assignment3.css
+++ b/Assignment3.css
@@ -1,6 +1,6 @@
 #wrapper{
     width:1000px;
-    height:1000px:
+    background-color: blue;
 }
 
 #header{
@@ -23,16 +23,17 @@ font-size: 15px;
 }
 
 #Search{
-  width 1000px;
-  height 50px;
+  width: 1000px;
+  height: 25px;
   background-color: black;
   color: white;
+  margin-bottom: 10px;
 }
 
 #leftpic{
     width: 250px;
     height: 250px;
-    background-color: blue;
+    background-color: lightblue;
     float:left;
 }
 
@@ -44,15 +45,15 @@ font-size: 15px;
     width:200px;
     height:200px;
     margin:25px 25px 25px 25px;
-    background-color:white;
+    background-color:lightblue;
     }
 
 #rightdesc{
         width: 700px;
         height: 250px;
-        background-color:blue;
+        background-color:lightblue;
         float:right;
-        color: white;
+        color: yellow;
       }
       #H2text{
           position: relative;
@@ -60,3 +61,105 @@ font-size: 15px;
           left: 250px;
           color: white;
       }
+
+      #box1{
+              margin-top: 50px;
+              width: 400px;
+              height: 250px;
+              background-color:lightblue;
+              float:left;
+              color: yellow;
+            }
+
+      #Equiptment{
+          position: relative;
+          top: 20px;
+          left: 135px;
+          color: white;
+          font-size: 20px;
+      }
+
+      #box2{
+              margin-top: 50px;
+              width: 400px;
+              height: 250px;
+              background-color:lightblue;
+              float:right;
+              color: yellow;
+            }
+
+      #Accessories{
+          position: relative;
+          top: 20px;
+          right: -160px;
+          color: white;
+          font-size: 20px;
+      }
+
+      #box3{
+              margin-top: 50px;
+              width: 400px;
+              height: 250px;
+              background-color:lightblue;
+              float:left;
+              color: yellow;
+            }
+
+      #Supplies{
+          position: relative;
+          top: 20px;
+          left: 135px;
+          color: white;
+          font-size: 20px;
+      }
+
+      #box4{
+              margin-top: 50px;
+              width: 400px;
+              height: 250px;
+              background-color:lightblue;
+              float:right;
+              color: yellow;
+            }
+
+      #Parts{
+          position: relative;
+          top: 20px;
+          right: -160px;
+          color: white;
+          font-size: 20px;
+      }
+
+      #Menu1{
+        top: 1130px;
+        width: 1000px;
+        height: 50px;
+        background-color: purple;
+        color: white;
+        float: none;
+        position: absolute;
+      }
+
+      #menu{
+        font-size: 30px;
+        text-align: center;
+        color: yellow;
+      }
+
+      #Contact{
+              width: 650px;
+              height: 250px;
+              background-color:lightblue;
+              float: none;
+              color: black;
+              margin-left: 175px;
+              margin-right: 175px;
+              margin-top: 950px;
+              font-size: 25px;
+            }
+      #Cinfo{
+                position: relative;
+                top: 20px;
+                left: 250px;
+                color: white;
+            }
