--- a/Assignment3.css
+++ b/Assignment3.css
@@ -25,15 +25,15 @@ font-size: 15px;
 #Search{
   width: 1000px;
   height: 25px;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   margin-bottom: 10px;
 }
 
 #leftpic{
     width: 250px;
     height: 250px;
-    background-color: lightblue;
+    background-color: aqua;
     float:left;
 }
 
@@ -45,37 +45,37 @@ font-size: 15px;
     width:200px;
     height:200px;
     margin:25px 25px 25px 25px;
-    background-color:lightblue;
+    background-color:aqua;
     }
 
 #rightdesc{
         width: 700px;
         height: 250px;
-        background-color:lightblue;
+        background-color:aqua;
         float:right;
-        color: yellow;
+        color: Goldenrod;
       }
       #H2text{
           position: relative;
           top: 20px;
           left: 250px;
-          color: white;
+          color: black;
       }
 
       #box1{
               margin-top: 50px;
               width: 400px;
               height: 250px;
-              background-color:lightblue;
+              background-color:aqua;
               float:left;
-              color: yellow;
+              color: Goldenrod;
             }
 
       #Equiptment{
           position: relative;
           top: 20px;
           left: 135px;
-          color: white;
+          color: black;
           font-size: 20px;
       }
 
@@ -83,16 +83,16 @@ font-size: 15px;
               margin-top: 50px;
               width: 400px;
               height: 250px;
-              background-color:lightblue;
+              background-color:aqua;
               float:right;
-              color: yellow;
+              color: Goldenrod;
             }
 
       #Accessories{
           position: relative;
           top: 20px;
           right: -160px;
-          color: white;
+          color: black;
           font-size: 20px;
       }
 
@@ -100,16 +100,16 @@ font-size: 15px;
               margin-top: 50px;
               width: 400px;
               height: 250px;
-              background-color:lightblue;
+              background-color:aqua;
               float:left;
-              color: yellow;
+              color: Goldenrod;
             }
 
       #Supplies{
           position: relative;
           top: 20px;
           left: 135px;
-          color: white;
+          color: black;
           font-size: 20px;
       }
 
@@ -117,16 +117,16 @@ font-size: 15px;
               margin-top: 50px;
               width: 400px;
               height: 250px;
-              background-color:lightblue;
+              background-color:aqua;
               float:right;
-              color: yellow;
+              color: Goldenrod;
             }
 
       #Parts{
           position: relative;
           top: 20px;
           right: -160px;
-          color: white;
+          color: black;
           font-size: 20px;
       }
 
@@ -134,8 +134,7 @@ font-size: 15px;
         top: 1130px;
         width: 1000px;
         height: 50px;
-        background-color: purple;
-        color: white;
+        background-color:Fuchsia;
         float: none;
         position: absolute;
       }
@@ -149,9 +148,9 @@ font-size: 15px;
       #Contact{
               width: 650px;
               height: 250px;
-              background-color:lightblue;
+              background-color:aqua;
               float: none;
-              color: black;
+              color: Goldenrod;
               margin-left: 175px;
               margin-right: 175px;
               margin-top: 950px;
@@ -161,5 +160,5 @@ font-size: 15px;
                 position: relative;
                 top: 20px;
                 left: 250px;
-                color: white;
+                color: Black;
             }
